change file name

--- a/jqueryTest1.html
+++ b/jqueryTest1.html
@@ -14,9 +14,9 @@
 		//http://blog.kevinchisholm.com/javascript/include-function-as-javascript-object-member/
 		var student1 = {
 			name : "john doe",
-			program: "general program",
+			program: "program1",
 			level: 2,
-			//
+			//https://stackoverflow.com/questions/1208222/how-do-i-implement-a-dictionary-or-hashtable-in-javascript
 			courseGrades : {
 				math : "A",
 				english : "B-",
@@ -25,6 +25,10 @@
 			}
 
 		}				
+
+		var program1 = {
+			
+		}
 
 		writeStudent(student1);
 
