--- a/manyStudents.html
+++ b/manyStudents.html
@@ -24,6 +24,7 @@
 		// writeStudent(student1);
 		var numStudents = 10;
 		writeColumns(rStudent);
+		// add 10 random students to table	
 		for(var i = 0; i < numStudents; i++){
 			rStudent = getRandomStudent();
 			writeStudenToTable(rStudent);
