--- a/checkGrades.html
+++ b/checkGrades.html
@@ -3,6 +3,7 @@
 	<title>sproject 0.1</title>
 </head>
 <link rel="stylesheet" type="text/css" href="css/table.css">
+<link rel="stylesheet" type="text/css" href="css/accordian.css">
 
 <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
 <body>
@@ -10,11 +11,28 @@
 	<script src="js/tableFunctions.js"></script>
 	<script src="js/randomStudent.js"></script>
 
-	<table id="myTable">
-	  <tbody>
-	  </tbody>
-	</table>
 
+
+
+	<div id="accordian">
+		<ul>
+			<li>
+				<h3>Dashboard</h3>
+				<ul>
+					<li id="grade"><a href="#">Course + Grade</a></li>
+					<!-- <li id="grade"><a href="#">Grades</a></li> -->
+					<!-- <li><a href="#">Graphs</a></li> -->
+					<!-- <li><a href="#">Setting</a></li> -->
+				</ul>
+			</li>
+		</ul>
+	</div>
+	<div id="table">
+		<table id="myTable" >
+		  <tbody>
+		  </tbody>
+		</table>
+	</div>
 	<script>
 
 	$(document).ready(function(){
@@ -45,7 +63,12 @@
 		});
 
 		function openMenu(student){
-			
+			var html;
+			for(var course in student.courseGrades) {
+				html += "<li>"+ course +" "+ student.courseGrades[course] + "</li>";
+			};
+			// html += "</ul>";
+			$("#accordian #grade").html(html);
 		}
 
 		function findStudent(str){
