--- a/Test3-showGrades.html
+++ b/Test3-showGrades.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="css/table.css">
 <link rel="stylesheet" type="text/css" href="css/accordian.css">
 
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
 <body>
 
 	<script src="js/tableFunctions.js"></script>
