--- a/index.html
+++ b/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+    .jumbotron{
+    height: 500px;
+    background-image:url('http://goo.gl/04j7Nn');
+    }
+    .jumbotron h1{
+        color: #fff;
+        font-family:'Shift', sans-serif;
+        font-size: 48px;
+        font-weight: bold;
+    }
+    .jumbotron p{
+        color: #fff;
+        font-size: 20px;
+    }
+
+    .learn-more{
+        background-color:#f7f7f7;
+    }
+
+    .learn-more a{
+        color: #00b0ff;
+    }
+    .learn-more h3{
+        background-color:#f7f7f7;
+        font-family:'Shift', sans-serif;
+        font-size: 18px;
+        font-weight:bold;
+    }
+
+    .nav li{
+        display: inline;
+        color: #5a5a5a;
+        font-size: 11px;
+        font-weight: bold;
+        padding-top: 14px;
+        padding-bottom:14px;
+        padding-left: 10px;
+        padding-right:10px;
+        text-transform:uppercase;
+    }
+    </style>
+</head>
  <body>
   <div class="nav">
       <div class="container">
         <ul>
-    	   <li>name</li>
     	  <li>Browse</li>
     	</ul>
     	<ul>
-	        <li>Sign up</li>
+	        <!-- <li>Sign up</li> -->
 	        <li>Login</li>
 	        <li>Help</li>
 	    </ul>
